NGD-657 BT-WIFI-Complete
Se logro que mediante el envío de dos datos por medio de Bluetooth el ESP32 se conecte a wifi y que desde el ESP32 se le envíe a la aplicación la dirección ip del mismo, la app la recibe y la muestra en pantalla, lista para iniciarla a usar en el proceso del servidor web.

--- a/app/src/main/res/layout/activity_conexion.xml
+++ b/app/src/main/res/layout/activity_conexion.xml
@@ -1,295 +1,103 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_gravity="center"
+    tools:context=".ConexionActivity"
+    android:orientation="vertical"
     android:background="@color/black"
-    android:textAlignment="center"
-    tools:context=".ConexionActivity">
+    >
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.043"
-        tools:ignore="MissingConstraints" />
-
-    <TextView
-        android:layout_width="350dp"
-        android:layout_height="65dp"
-        android:text="CONEXIÓN"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.490"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.072" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
-
-
-    <Button
-
-        android:id="@+id/btnDispBT"
-
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#252CD2"
-        android:text="Dispositivos BT"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="15.5sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325"
-        tools:ignore="TouchTargetSizeCheck"></Button>
-
-    <Button
-
-        android:id="@+id/btnDispConnect"
-
-        android:layout_width="330dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="@color/white"
-        android:text="CONECTAR DISPOSITIVO"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.416"
-        tools:ignore="TouchTargetSizeCheck"></Button>
-
-    <Spinner
-
-        android:id="@+id/listDispBT"
-
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#3781D8"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.923"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.325"
-        tools:ignore="TouchTargetSizeCheck"></Spinner>
-
-    <Button
-
-        android:id="@+id/btnActBT"
-
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#FF2BFF80"
-        android:text="Activar BT"
-        android:textAlignment="center"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.232"
-
-
-        tools:ignore="TouchTargetSizeCheck"></Button>
-
-    <Button
-
-        android:id="@+id/btnDesBT"
-
-        android:layout_width="150dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#BC5F4B"
-        android:text="Desactivar BT"
-        android:textAlignment="center"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.923"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.232"
-        tools:ignore="TouchTargetSizeCheck"></Button>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.474" />
-
-    <TextView
+    <!--ListView, no eliminar-->
+    <ListView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="RED WIFI"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="35sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.523" />
-
-
-    <EditText
-        android:id="@+id/campSSID"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_text_camp"
-        android:backgroundTint="@color/white"
-        android:hint="Nombre de la red"
-        android:paddingStart="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.601"
-        tools:ignore="TouchTargetSizeCheck" />
-
-    <EditText
-        android:id="@+id/campPASS"
-
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:background="@drawable/redondo_text_camp"
-        android:backgroundTint="@color/white"
-        android:hint="Contraseña de la red"
-        android:inputType="textPassword"
-        android:paddingStart="20dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.685"
-        tools:ignore="TouchTargetSizeCheck" />
-
-
-    <Button
-
-        android:id="@+id/btnSendDW"
-
-        android:layout_width="251dp"
-        android:layout_height="wrap_content"
+        android:id="@+id/listBT"
+        android:visibility="visible"
         android:background="@drawable/redondo_15dp"
-        android:backgroundTint="#3781D8"
-        android:text="ENVIAR DATOS"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.504"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.777"></Button>
+        android:backgroundTint="#3E3E3E"
+        >
+    </ListView>
 
-    <View
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
+        android:layout_height="360dp"
+        android:orientation="vertical"
+        android:id="@+id/LinearLAY"
+        android:visibility="gone"
+        >
 
-    <ImageButton
+        <TextView
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="RED WIFI"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="35sp"
+            android:textStyle="bold" />
 
-        android:id="@+id/btnHome"
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:id="@+id/campSSID"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:hint="Nombre de la red"
+            android:background="@drawable/redondo_text_camp"
+            android:backgroundTint="@color/white"
+            android:paddingStart="20dp"
+            >
+        </EditText>
 
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@color/black"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.062"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/home"
-        tools:ignore="SpeakableTextPresentCheck" />
+        <EditText
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="15dp"
+            android:layout_gravity="center"
+            android:id="@+id/campPASS"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:hint="Contraseña de la red"
+            android:background="@drawable/redondo_text_camp"
+            android:backgroundTint="@color/white"
+            android:paddingStart="20dp"
+            >
+        </EditText>
 
+        <Button
+            android:layout_width="250dp"
+            android:layout_height="50dp"
+            android:id="@+id/btnSend"
+            android:background="@drawable/redondo_15dp"
+            android:textSize="25sp"
+            android:textStyle="bold"
+            android:backgroundTint="#3781D8"
+            android:text="ENVIAR DATOS"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            >
+        </Button>
 
-    <ImageButton
+        <TextView
+            android:id="@+id/consola"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:background="#8A8A8A"
+            android:textSize="20sp"
+            android:textColor="#1E1E1E"
+            android:layout_gravity="center"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
 
-        android:id="@+id/btnPanel"
+            />
 
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@color/black"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/panel"
-        tools:ignore="SpeakableTextPresentCheck" />
+    </LinearLayout>
 
-    <ImageButton
-
-        android:id="@+id/btnInfo"
-
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:background="@color/black"
-        android:scaleType="centerCrop"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.931"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.961"
-        app:srcCompat="@mipmap/info"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
