--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -67,7 +67,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.348"></Button>
+        app:layout_constraintVertical_bias="0.348" />
 
     <TextView
 
@@ -86,9 +86,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -110,7 +108,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.469"></Button>
+        app:layout_constraintVertical_bias="0.469" />
 
     <TextView
 
@@ -129,8 +127,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -152,7 +149,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.589"></Button>
+        app:layout_constraintVertical_bias="0.589" />
 
     <Button
 
@@ -174,8 +171,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.350"
-        android:visibility="invisible"
-        ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -194,8 +190,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
 
 
@@ -219,7 +214,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.435"
-        android:visibility="invisible" ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -238,8 +233,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -261,8 +255,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.520"
-        android:visibility="invisible"
-        ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -281,8 +274,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -304,8 +296,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.605"
-        android:visibility="invisible"
-        ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -324,8 +315,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.5"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -345,7 +335,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/textAA"
-        android:visibility="invisible"></Button>
+        android:visibility="invisible" />
 
     <Button
 
@@ -367,8 +357,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.690"
-        android:visibility="invisible"
-        ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -387,8 +376,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <Button
 
@@ -410,8 +398,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.775"
-        android:visibility="invisible"
-        ></Button>
+        android:visibility="invisible" />
 
     <TextView
 
@@ -430,8 +417,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.65"
         android:padding="35dp"
-        android:visibility="invisible"
-        ></TextView>
+        android:visibility="invisible" />
 
     <View
         android:layout_width="match_parent"
@@ -465,7 +451,7 @@
 
     <ImageButton
 
-        android:id="@+id/btnPanel"
+        android:id="@+id/btnDangerZ"
 
         android:layout_width="75dp"
         android:layout_height="75dp"
