--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -183,7 +183,7 @@
 
     <ImageButton
 
-        android:id="@+id/btnPanel"
+        android:id="@+id/btnDangerZ"
 
         android:layout_width="90dp"
         android:layout_height="90dp"
