--- a/app/src/main/res/layout/activity_conexion.xml
+++ b/app/src/main/res/layout/activity_conexion.xml
@@ -20,14 +20,15 @@
         >
     </ListView>
 
+
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="360dp"
+        android:layout_height="550dp"
         android:orientation="vertical"
-        android:id="@+id/LinearLAY"
+        android:id="@+id/LAYOUT_RED"
         android:visibility="gone"
         >
-
         <TextView
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
@@ -95,8 +96,59 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             android:layout_marginTop="20dp"
+            />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="3dp"
+            android:background="@color/white"
+            android:layout_marginTop="220dp"
+            app:layout_constraintVertical_bias="0.71" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/LAYOUT_MENU"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        >
+
+        <ImageButton
+            android:id="@+id/btnHome"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/home"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:layout_marginStart="20dp"
 
             />
+
+        <ImageButton
+            android:id="@+id/btnDangerZ"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/panel"
+            tools:ignore="SpeakableTextPresentCheck"
+            android:layout_marginStart="25dp"
+            />
+
+        <ImageButton
+            android:id="@+id/btnInfo"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
+            android:layout_marginStart="20dp"
+            android:background="@color/black"
+            android:scaleType="centerCrop"
+            app:srcCompat="@mipmap/info"
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </LinearLayout>
 
