--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,4 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".splashActivity">
 
+    <View
+        android:background="@mipmap/logo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
+        >
+    </View>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
