--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -150,6 +150,27 @@
 
     <Button
 
+        android:id="@+id/listP"
+
+        android:layout_width="340dp"
+        android:layout_height="50dp"
+        android:background="@drawable/btn_state_blue"
+        android:paddingStart="15dp"
+        android:text="Sitio Web"
+        android:textAlignment="textStart"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="35sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.71" />
+
+    <Button
+
         android:id="@+id/listJD"
 
         android:layout_width="340dp"
