--- a/app/src/main/res/layout/activity_danger.xml
+++ b/app/src/main/res/layout/activity_danger.xml
@@ -69,7 +69,7 @@
 
         android:layout_width="250dp"
         android:layout_height="48dp"
-        android:background="@drawable/btn_state_red"
+        android:background="@drawable/btn_state_green"
         android:text="Activar Sistema"
         android:textAlignment="center"
         android:textAllCaps="false"
