--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -83,7 +83,7 @@
         android:background="@drawable/btn_state_green"
         android:backgroundTint="#878787"
         android:gravity="center"
-        android:text="NGD-657"
+        android:text="MANUAL"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="19sp"
@@ -116,7 +116,7 @@
 
     <TextView
 
-        android:id="@+id/btnTextConect"
+        android:id="@+id/btnTextConnect"
 
         android:layout_width="160dp"
         android:layout_height="30dp"
